--- a/styles/styles.css
+++ b/styles/styles.css
@@ -100,6 +100,7 @@ a {
 
 .flex {
   display: flex;
+  justify-content: center;
   align-items: center;
 }
           /* Utility classes end */
@@ -121,7 +122,7 @@ a {
 
           /* Header start */
 
-.header-div {
+.header-container {
   justify-content: space-between;
   padding-top: var(--header-pt);
 
@@ -228,10 +229,89 @@ a {
           /* Header end */
 
           /* Showcase start */
+.showcase-container {
+  text-align: center;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-template-areas:
+  "showcase-h1"
+  "showcase-pitch"
+  "store-buttons"
+  "discover-more";
 
+  .showcase-h1 {
+    margin-top: 2rem;
+  }
+  .showcase-pitch {
+    margin-top: 2rem;
+  }
+  .store-buttons {
+    margin-top: 2.5rem;
+  }
+  .discover-more {
+    gap: 1.5rem;
+    margin: 2rem 0;
+  }
 
+  /* Mobile first */
+  .paragraph-splitter, .showcase-image-container {
+    display: none;
+  }
+}
 
+.showcase-h1 {
+  grid-area: showcase-h1;
+  font-weight: var(--fw-extra);
+  font-size: 34.1px;
+  color: var(--color-heading);
+}
 
+.showcase-pitch {
+  grid-area: showcase-pitch;
+  color: var(--color-paragraph);
+  font-size: var(--fs-body-l);
+}
+
+/* Scaleable app store buttons */
+.store-buttons {
+  grid-area: store-buttons;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+.btn-store-container {
+  width: 100%;
+}
+
+.btn-store {
+  background-color: var(--color-bg-btnstore);
+  border-radius: .5rem;
+  padding: auto;
+  height: 50px;
+  width: 100%;
+}
+
+.btn-store-img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+  padding: .4rem;
+}
+
+.discover-more {
+  grid-area: discover-more;
+
+  &:hover{
+    cursor: pointer;
+  }
+
+  .discover-more-text {
+    color: var(--color-paragraph);
+    font-size: 14px;
+  }
+}
+
+          /* Showcase end */
 
 
           /* Media queries start */
@@ -251,7 +331,15 @@ a {
     .logo-img {
       content: url('/assets/logo-bgdark.svg');
     }
-
+    .btn-apple-img {
+      content: url('/assets/appstorebadges/appstore-dark.svg');
+    }
+    .btn-google-img {
+      content: url('/assets/appstorebadges/googleplay-dark.svg');
+    }
+    .discover-more-img {
+      content: url('/assets/icons/chevron-dn-dark.svg');
+    }
     /* Set darkmode switch to active position */
     .dmswitchbg::before {
       transform: translateX(20px);
@@ -274,6 +362,15 @@ a {
     /* Swap to light-texted logo */
     .logo-img {
       content: url('/assets/logo-bgdark.svg');
+    }
+    .btn-apple-img {
+      content: url('/assets/appstorebadges/appstore-dark.svg');
+    }
+    .btn-google-img {
+      content: url('/assets/appstorebadges/googleplay-dark.svg');
+    }
+    .discover-more-img {
+      content: url('/assets/icons/chevron-dn-dark.svg');
     }
     /* Set darkmode switch to active position */
     .dmswitchbg::before {
