--- a/styles/styles.css
+++ b/styles/styles.css
@@ -336,6 +336,76 @@ a {
 }
 
           /* Hero end */
+          /* Features start */
+
+.features-container {
+  display: grid;
+  grid-template-columns: 1fr;
+
+  .headline, .paragraph {
+    text-align: center;
+  }
+
+  .headline {
+    margin-top: 2.5rem;
+    font-size: 28px;
+    font-weight: var(--fw-extra);
+  }
+
+  .paragraph {
+    margin-top: 1rem;
+    font-size: var(--fs-body-l);
+    line-height: 28.8px;
+    color: var(--color-paragraph);
+  }
+
+  /* Hide on mobile */
+  .left-img {
+    display: none;
+  }
+
+  .right-content {
+    display: grid;
+    grid-template-columns: 1fr;
+  }
+
+  .feature-cards {
+    margin-top: 2rem;
+  }
+
+  .card {
+    display: flex;
+    gap: 1.5rem;
+    margin-bottom: 2.25rem;
+
+    .card-img-container {
+      flex-shrink: 0; /* Prevent flex container from shrining box below 60x60*/
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      width: 60px;
+      height: 60px;
+      background-color: var(--color-gray-100); /* Change to theme-var later */
+      border-radius: 8px;
+    }
+
+    .cardtext {
+      p {
+        margin-top: 1rem;
+        color: var(--color-paragraph);
+      }
+      h3 {
+        font-size: 20px;
+        font-weight: var(--fw-extra);
+      }
+    }
+  }
+
+
+
+
+}        
+
           /* Media queries start */
 
 @media (width >= 768px) {
