--- a/styles/styles.css
+++ b/styles/styles.css
@@ -257,7 +257,7 @@ a {
 
           /* Header end */
           /* Hero start */
-#hero {
+section#hero {
   background: rgb(99,102,241);
   background: linear-gradient(0deg, rgba(99,102,241,0.1) 0%, rgba(218,70,239,0.05) 42%, rgba(241,244,253,0.07) 83%);
 }
@@ -456,7 +456,8 @@ a {
 
           /* Features end */
           /* How-does-it-work start */
-#how {
+
+section#how {
   background-color: var(--color-how-bg);
 }
 
@@ -501,6 +502,30 @@ a {
   }
 }
 
+          /* How-does-it-work end */
+          /* Payment start */
+
+section#payment {
+  display: none;
+}
+
+          /* Payment end */
+          /* Reviews start */
+
+section#reviews {
+  display: none;
+}
+
+          /* Reviews end */
+          /* FAQ-contact start */
+          
+          /* FAQ-contact end */
+          /* Subscribe start */
+          
+          /* Subscribe end */
+          /* Footer start */
+
+          /* Footer end */
 
           /* Media queries start */
 
